frontend/tests/cases/positive/deriving/pushPair.gr
-- push example

foo : forall {a : Type, b : Type} . (a, b) [] -> (a [], b [])
foo = push @((,))