frontend/tests/cases/negative/splitting/graded.gr
foo : forall {a : Type, b : Type} . (a, b) [] -> (b, a)
foo [x] = {! x !}